--- a/app/src/main/res/layout/fragment_panorama_setting.xml
+++ b/app/src/main/res/layout/fragment_panorama_setting.xml
@@ -4,27 +4,8 @@
     android:layout_height="match_parent"
     android:background="@color/color_white"
     android:clickable="true"
+    android:focusable="true"
     android:orientation="vertical">
-
-
-    <!--<FrameLayout-->
-    <!--android:id="@+id/fLayout_top_bar_container"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:background="@color/color_0ba8cf">-->
-
-    <!--<TextView-->
-    <!--android:id="@+id/act_panorama_setting_header_back"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="@dimen/y48"-->
-    <!--android:drawablePadding="@dimen/y15"-->
-    <!--android:drawableStart="@drawable/nav_tab_back_selector"-->
-    <!--android:gravity="center_vertical"-->
-    <!--android:paddingStart="@dimen/y15"-->
-    <!--android:text="@string/SETTINGS_1"-->
-    <!--android:textColor="@color/color_white"-->
-    <!--android:textSize="@dimen/sp18" />-->
-    <!--</FrameLayout>-->
 
     <com.cylan.jiafeigou.widget.CustomToolbar
         android:id="@+id/fLayout_top_bar_container"
@@ -42,6 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
+        android:focusable="true"
         android:orientation="vertical">
 
         <View
