--- a/app/src/main/res/layout/fragment_mine_help_suggestion.xml
+++ b/app/src/main/res/layout/fragment_mine_help_suggestion.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/color_white"
     android:clickable="true"
+    android:focusable="true"
     android:orientation="vertical">
 
     <com.cylan.jiafeigou.widget.CustomToolbar
