--- a/app/src/_doby/res/values/oem_.xml
+++ b/app/src/_doby/res/values/oem_.xml
@@ -2,7 +2,7 @@
 <resources>
     <bool name="show_guide">true</bool>
     <bool name="show_copyright">false</bool>
-    <bool name="show_agreement">true</bool>
+    <bool name="show_agreement">false</bool>
     <bool name="show_about">true</bool>
     <bool name="show_official_website">false</bool>
     <bool name="show_official_hot_line">false</bool>
@@ -20,4 +20,5 @@
     <string name="facebook_app_id">fb1770285686596084</string>
     <string name="agreementSuffix">"_zhongxing"</string>
     <string name="log">"Doby"</string>
+    <integer name="max_password_length">32</integer>
 </resources>
