--- a/app/src/main/res/values/oem_.xml
+++ b/app/src/main/res/values/oem_.xml
@@ -22,4 +22,5 @@
     <string name="facebook_app_id">fb1866682200216878</string>
     <string name="agreementSuffix">""</string>
     <string name="log">"Smarthome"</string>
+    <integer name="max_password_length">32</integer>
 </resources>
