--- a/app/src/_doby/res/values-zh-rCN/oem_.xml
+++ b/app/src/_doby/res/values-zh-rCN/oem_.xml
@@ -21,5 +21,5 @@
     <string name="agreementSuffix">"_zhongxing"</string>
     <string name="log">"Doby"</string>
     <integer name="max_password_length">32</integer>
-    <bool name="show_weixin_push">false</bool>
+    <bool name="show_weixin_push">true</bool>
 </resources>
