--- a/app/src/main/res/layout/fragment_sninput.xml
+++ b/app/src/main/res/layout/fragment_sninput.xml
@@ -15,6 +15,10 @@
         hunt:ct_icon="@drawable/nav_icon_back_gary"
         hunt:ct_title_color="@color/color_black" />
 
+    <Space
+        android:layout_width="@dimen/x1"
+        android:layout_height="@dimen/y33" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
