--- a/app/src/main/res/layout/fragment_mine_suggestion_client.xml
+++ b/app/src/main/res/layout/fragment_mine_suggestion_client.xml
@@ -57,7 +57,7 @@
 
             <TextView
                 android:id="@+id/tv_mine_suggestion_client_speak"
-                android:layout_width="wrap_content"
+                android:layout_width="@dimen/x230"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/x3"
                 android:background="@drawable/pic_container_blue"
