--- a/app/src/main/res/layout/activity_bind_animation.xml
+++ b/app/src/main/res/layout/activity_bind_animation.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:hunt="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -18,6 +18,7 @@
         android:id="@+id/tv_main_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/custom_toolbar"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/y20"
         android:gravity="center"
@@ -30,6 +31,7 @@
         android:id="@+id/tv_sub_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_main_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/y15"
         android:gravity="center"
@@ -38,26 +40,20 @@
         android:textSize="@dimen/sp16"
         hunt:layout_constraintTop_toBottomOf="@+id/tv_main_content" />
 
-    <FrameLayout
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/imv_gif_container"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/layout_next_step"
+        android:layout_below="@+id/tv_sub_title"
         android:layout_marginEnd="@dimen/x20"
-        android:layout_marginStart="@dimen/x20"
-        android:layout_marginTop="-20dp"
-        hunt:layout_constraintBottom_toTopOf="@+id/layout_next_step"
-        hunt:layout_constraintTop_toBottomOf="@+id/tv_sub_title"
-        hunt:layout_constraintVertical_bias="0">
-
-        <ImageView
-            android:id="@+id/imv_gif_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </FrameLayout>
+        android:layout_marginStart="@dimen/x20" />
 
     <LinearLayout
         android:id="@+id/layout_next_step"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:orientation="vertical"
         hunt:layout_constraintBottom_toBottomOf="parent">
 
@@ -77,4 +73,4 @@
             android:textSize="@dimen/sp16" />
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
