睿视首页图标显示错误,时间轴拖动,门铃 home 键结束

--- a/app/src/main/res/layout/layout_cam_live_control_layer_ex.xml
+++ b/app/src/main/res/layout/layout_cam_live_control_layer_ex.xml
@@ -202,6 +202,7 @@
                     android:id="@+id/sw_cam_live_wheel"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_toStartOf="@+id/tv_cam_live_land_bottom"
                     android:clickable="true"
                     app:sw_lineColor="@color/color_FFDEDEDE"
                     app:sw_markerColor="@color/color_36BDFF"
