--- a/app/src/main/res/layout/activity_bind_device.xml
+++ b/app/src/main/res/layout/activity_bind_device.xml
@@ -47,7 +47,8 @@
                     android:drawablePadding="@dimen/y5"
                     android:drawableTop="@drawable/icon_scan"
                     android:gravity="center"
-                    android:text="@string/Tap3_FriendsAdd_QR" />
+                    android:text="@string/Tap3_FriendsAdd_QR"
+                    android:textColor="@color/color_333333" />
 
                 <TextView
                     android:id="@+id/v_to_input_sn"
@@ -58,7 +59,8 @@
                     android:drawablePadding="@dimen/y5"
                     android:drawableTop="@drawable/icon_sn"
                     android:gravity="center"
-                    android:text="@string/Add_Device_SN" />
+                    android:text="@string/Add_Device_SN"
+                    android:textColor="@color/color_333333" />
             </LinearLayout>
             <!--<com.cylan.jiafeigou.widget.HomeMineItemView-->
             <!--android:id="@+id/v_to_scan_qrcode"-->
@@ -80,7 +82,7 @@
                 hunt:leftDrawable="@drawable/icon_home_camera_online"
                 hunt:rightDrawable="@drawable/icon_mine_arrow_next"
                 hunt:text="@string/DOG_CAMERA_NAME"
-                hunt:textColor="@color/color_383838"
+                hunt:textColor="@color/color_666666"
                 hunt:textSize="@dimen/sp16" />
 
             <com.cylan.jiafeigou.widget.HomeMineItemView
@@ -91,7 +93,7 @@
                 hunt:leftDrawable="@drawable/home_icon_cloud_camera"
                 hunt:rightDrawable="@drawable/icon_mine_arrow_next"
                 hunt:text="@string/Cloud_Camera"
-                hunt:textColor="@color/color_383838"
+                hunt:textColor="@color/color_666666"
                 hunt:textSize="@dimen/sp16" />
 
             <com.cylan.jiafeigou.widget.HomeMineItemView
@@ -102,7 +104,7 @@
                 hunt:leftDrawable="@drawable/home_icon_720camera_online"
                 hunt:rightDrawable="@drawable/icon_mine_arrow_next"
                 hunt:text="@string/_720PanoramicCamera"
-                hunt:textColor="@color/color_383838"
+                hunt:textColor="@color/color_666666"
                 hunt:textSize="@dimen/sp16" />
 
             <com.cylan.jiafeigou.widget.HomeMineItemView
@@ -113,7 +115,7 @@
                 hunt:leftDrawable="@drawable/home_icon_rs_online"
                 hunt:rightDrawable="@drawable/icon_mine_arrow_next"
                 hunt:text="@string/Consumer_Camera"
-                hunt:textColor="@color/color_383838"
+                hunt:textColor="@color/color_666666"
                 hunt:textSize="@dimen/sp16" />
 
             <com.cylan.jiafeigou.widget.HomeMineItemView
@@ -124,7 +126,7 @@
                 hunt:leftDrawable="@drawable/icon_home_doorbell_online"
                 hunt:rightDrawable="@drawable/icon_mine_arrow_next"
                 hunt:text="@string/Smart_bell_Battery"
-                hunt:textColor="@color/color_383838"
+                hunt:textColor="@color/color_666666"
                 hunt:textSize="@dimen/sp16" />
 
             <com.cylan.jiafeigou.widget.HomeMineItemView
@@ -135,7 +137,7 @@
                 hunt:leftDrawable="@drawable/icon_home_doorbell_online"
                 hunt:rightDrawable="@drawable/icon_mine_arrow_next"
                 hunt:text="@string/Smart_bell_Power"
-                hunt:textColor="@color/color_383838"
+                hunt:textColor="@color/color_666666"
                 hunt:textSize="@dimen/sp16" />
 
             <com.cylan.jiafeigou.widget.HomeMineItemView
